# sff-rewriter

./: Cargo.toml  rustfmt.toml
.github/workflows/: release.yml
rewriter/: Cargo.toml
rewriter/src/: diff.rs  kinds.rs  lib.rs
rewriter/src/visit/: alignment.rs  column.rs  debug.rs  mod.rs  quotes.rs  spacing.rs
rewriter/tests/: test_rewriter.rs
rewriter/tests/input/: columns.py  comments.py  parens.py
rewriter/tests/output/: alignment.py  columns.py  comments.py  parens.py  quotes.py
src/: diff.rs  kinds.rs  main.rs
src/visit/: alignment.rs  brackets.rs  debug.rs  mod.rs  parens.rs  quotes.rs  spacing.rs
tests/: test_rewriter.rs
tests/input/: alignment.py  parens.py  quotes.py
tests/output/: parens.py
vscode/: .gitignore  package-lock.json  package.json  tsconfig.json
vscode/src/: downloader.ts  extension.ts  formatter.ts
