[package]
name = "sff-formatter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.10"
log = "0.4.29"
smol_str = "0.3.6"
tree-sitter = "0.26.8"
tree-sitter-python = "0.25.0"

[dev-dependencies]
similar = "3.1.0"
